--- a/index.html
+++ b/index.html
@@ -24,10 +24,161 @@
                 <button class="register">Cadastre-se</button>
             </section>
 
+
+
         </div>
+
+        <section class="container-grid header-content-flex">
+            <div class="header-content">
+                <h1>
+                    As melhores hospedagens do Brasil
+                </h1>
+                <h2>
+                    mais de 500 mil reservas esperando por você! Basta procurar pelo local ideal, e realizar a viagem
+                    dos seus sonhos
+                </h2>
+            </div>
+
+            <img class="map" src="./assets/mapa-brasil.png">
+        </section>
+
+        <section class="info-box">
+
+            <div class="input-box">
+                <img src="./assets/icons/local-icon.svg" alt="">
+                <input type="text" class="input" placeholder="Qual o local desejado?">
+            </div>
+
+            <div class="input-box">
+                <img src="./assets/icons/checkin-icon.svg" alt="">
+                <input type="text" class="input" placeholder="Data check-in">
+            </div>
+
+            <div class="input-box">
+                <img src="./assets/icons/checkout-icon.svg" alt="">
+                <input type="text" class="input" placeholder="Data check-out">
+            </div>
+
+            <button class="search-button">Procurar hotel</button>
+
+        </section>
+
     </header>
-    <main></main>
-    <footer></footer>
+
+
+    <main class="container-grid">
+        <section class="hotel-list">
+
+            <article class="hotel-box">
+                <img src="./assets/hotel-image.jpg" alt="" class="hotel-image">
+                <div class="hotel-title">
+                    <h1>Angra dos reis</h1>
+                    <h2>RJ</h2>
+                </div>
+                <p class="hotel-description">Desfrute de um paraíso tropical em nossa pousada! Relaxe em nossas piscinas com vista pro mar.</p>
+            </article>
+
+            <article class="hotel-box">
+                <img src="./assets/hotel-image.jpg" alt="" class="hotel-image">
+                <div class="hotel-title">
+                    <h1>Angra dos reis</h1>
+                    <h2>RJ</h2>
+                </div>
+                <p class="hotel-description">Desfrute de um paraíso tropical em nossa pousada! Relaxe em nossas piscinas com vista pro mar.</p>
+            </article>
+
+            <article class="hotel-box">
+                <img src="./assets/hotel-image.jpg" alt="" class="hotel-image">
+                <div class="hotel-title">
+                    <h1>Angra dos reis</h1>
+                    <h2>RJ</h2>
+                </div>
+                <p class="hotel-description">Desfrute de um paraíso tropical em nossa pousada! Relaxe em nossas piscinas com vista pro mar.</p>
+            </article>
+
+            <article class="hotel-box">
+                <img src="./assets/hotel-image.jpg" alt="" class="hotel-image">
+                <div class="hotel-title">
+                    <h1>Angra dos reis</h1>
+                    <h2>RJ</h2>
+                </div>
+                <p class="hotel-description">Desfrute de um paraíso tropical em nossa pousada! Relaxe em nossas piscinas com vista pro mar.</p>
+            </article>
+
+            <article class="hotel-box">
+                <img src="./assets/hotel-image.jpg" alt="" class="hotel-image">
+                <div class="hotel-title">
+                    <h1>Angra dos reis</h1>
+                    <h2>RJ</h2>
+                </div>
+                <p class="hotel-description">Desfrute de um paraíso tropical em nossa pousada! Relaxe em nossas piscinas com vista pro mar.</p>
+            </article>
+
+            <article class="hotel-box">
+                <img src="./assets/hotel-image.jpg" alt="" class="hotel-image">
+                <div class="hotel-title">
+                    <h1>Angra dos reis</h1>
+                    <h2>RJ</h2>
+                </div>
+                <p class="hotel-description">Desfrute de um paraíso tropical em nossa pousada! Relaxe em nossas piscinas com vista pro mar.</p>
+            </article>
+
+            <article class="hotel-box">
+                <img src="./assets/hotel-image.jpg" alt="" class="hotel-image">
+                <div class="hotel-title">
+                    <h1>Angra dos reis</h1>
+                    <h2>RJ</h2>
+                </div>
+                <p class="hotel-description">Desfrute de um paraíso tropical em nossa pousada! Relaxe em nossas piscinas com vista pro mar.</p>
+            </article>
+
+            <article class="hotel-box">
+                <img src="./assets/hotel-image.jpg" alt="" class="hotel-image">
+                <div class="hotel-title">
+                    <h1>Angra dos reis</h1>
+                    <h2>RJ</h2>
+                </div>
+                <p class="hotel-description">Desfrute de um paraíso tropical em nossa pousada! Relaxe em nossas piscinas com vista pro mar.</p>
+            </article>
+
+            
+
+        </section>
+
+        <section class="hotel-main-descriptions-container-flex container-grid">
+            <article class="hotel-main-descriptions">
+                <h1>
+                    Venha conferir os melhores <span style="color: #002777;">hotéis</span> com as melhores <span style="color: #019438;">promoções</span> do país
+                </h1>
+
+                <h2>
+                    <span style="color: #019438;">Não perca tempo</span> e venha conferir o que há de  <span style="color: #FFDF00;">melhor</span> na hotelagem brasileira.
+                </h2>
+            </article>
+
+            <img src="./assets/travel.png" alt="">
+        </section>
+
+    </main>
+    <footer>
+        <section class="footer-style">
+            <h1>
+                Fale com um de nossos acessores
+            </h1>
+
+            <p>
+                hospedagem@contato.com.br
+            </p>
+            <p>
+                (11) 0800-707-0707
+            </p>
+        </section>
+        <div class="rights">
+            <h1>
+                Hospedagens.com
+            </h1>
+        </div>
+    </footer>
 
 
 </body>
